--- a/service/package.json
+++ b/service/package.json
@@ -11,11 +11,18 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
+    "dayjs": "^1.11.11",
     "express": "^4.19.2",
-    "openai": "^4.52.0"
+    "openai": "^4.52.0",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/uuid": "^10.0.0",
+    "nock": "^13.5.4",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.5.2"
   }
