--- a/web/package.json
+++ b/web/package.json
@@ -12,13 +12,25 @@
   "dependencies": {
     "@headlessui/react": "^2.1.0",
     "@heroicons/react": "^2.1.4",
+    "@reduxjs/toolkit": "^2.2.6",
     "autoprefixer": "^10.4.19",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "dayjs": "^1.11.11",
+    "dayjs-plugin-utc": "^0.1.2",
+    "lucide-react": "^0.403.0",
     "postcss": "^8.4.38",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1",
-    "tailwindcss": "^3.4.4"
+    "react-tooltip": "^4.2.17",
+    "redux": "^5.0.1",
+    "tailwind-merge": "^2.4.0",
+    "tailwind-scrollbar": "^3.1.0",
+    "tailwindcss": "^3.4.4",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
